Source/WebCore/platform/win/SearchPopupMenuWin.cpp
@@ -21,11 +21,8 @@
 #include "config.h"
 #include "SearchPopupMenuWin.h"
 
+#include "SearchPopupMenuDB.h"
 #include <wtf/text/AtomicString.h>
-
-#if USE(CF)
-#include <wtf/RetainPtr.h>
-#endif
 
 namespace WebCore {
 
@@ -41,38 +38,15 @@ PopupMenu* SearchPopupMenuWin::popupMenu()
 
 bool SearchPopupMenuWin::enabled()
 {
-#if USE(CF)
     return true;
-#else
-    return false;
-#endif
 }
-
-#if USE(CF)
-static RetainPtr<CFStringRef> autosaveKey(const String& name)
-{
-    return String("com.apple.WebKit.searchField:" + name).createCFString();
-}
-#endif
 
 void SearchPopupMenuWin::saveRecentSearches(const AtomicString& name, const Vector<RecentSearch>& searchItems)
 {
     if (name.isEmpty())
         return;
 
-#if USE(CF)
-    RetainPtr<CFMutableArrayRef> items;
-
-    size_t size = searchItems.size();
-    if (size) {
-        items = adoptCF(CFArrayCreateMutable(0, size, &kCFTypeArrayCallBacks));
-        for (size_t i = 0; i < size; ++i)
-            CFArrayAppendValue(items.get(), searchItems[i].string.createCFString().get());
-    }
-
-    CFPreferencesSetAppValue(autosaveKey(name).get(), items.get(), kCFPreferencesCurrentApplication);
-    CFPreferencesAppSynchronize(kCFPreferencesCurrentApplication);
-#endif
+    SearchPopupMenuDB::singleton().saveRecentSearches(name, searchItems);
 }
 
 void SearchPopupMenuWin::loadRecentSearches(const AtomicString& name, Vector<RecentSearch>& searchItems)
@@ -80,22 +54,7 @@ void SearchPopupMenuWin::loadRecentSearches(const AtomicString& name, Vector<Rec
     if (name.isEmpty())
         return;
 
-#if USE(CF)
-    searchItems.clear();
-    RetainPtr<CFArrayRef> items = adoptCF(reinterpret_cast<CFArrayRef>(CFPreferencesCopyAppValue(autosaveKey(name).get(), kCFPreferencesCurrentApplication)));
-
-    if (!items || CFGetTypeID(items.get()) != CFArrayGetTypeID())
-        return;
-
-    size_t size = CFArrayGetCount(items.get());
-    for (size_t i = 0; i < size; ++i) {
-        CFStringRef item = (CFStringRef)CFArrayGetValueAtIndex(items.get(), i);
-        if (CFGetTypeID(item) == CFStringGetTypeID()) {
-            // We are choosing not to use or store search times on Windows at this time, so for now it's OK to use a "distant past" time as a placeholder.
-            searchItems.append({ String{ item }, -WallTime::infinity() });
-        }
-    }
-#endif
+    SearchPopupMenuDB::singleton().loadRecentSearches(name, searchItems);
 }
 
 }
