Source/WebKit/UIProcess/win/WebPageProxyWin.cpp
@@ -27,8 +27,8 @@
 #include "config.h"
 #include "WebPageProxy.h"
 
-#include "NotImplemented.h"
 #include "PageClientImpl.h"
+#include <WebCore/SearchPopupMenuDB.h>
 #include <WebCore/UserAgent.h>
 
 namespace WebKit {
@@ -42,14 +42,20 @@ String WebPageProxy::standardUserAgent(const String& applicationNameForUserAgent
     return WebCore::standardUserAgent(applicationNameForUserAgent);
 }
 
-void WebPageProxy::saveRecentSearches(const String&, const Vector<WebCore::RecentSearch>&)
+void WebPageProxy::saveRecentSearches(const String& name, const Vector<WebCore::RecentSearch>& searchItems)
 {
-    notImplemented();
+    if (!name)
+        return;
+
+    return WebCore::SearchPopupMenuDB::singleton().saveRecentSearches(name, searchItems);
 }
 
-void WebPageProxy::loadRecentSearches(const String&, Vector<WebCore::RecentSearch>&)
+void WebPageProxy::loadRecentSearches(const String& name, Vector<WebCore::RecentSearch>& searchItems)
 {
-    notImplemented();
+    if (!name)
+        return;
+
+    return WebCore::SearchPopupMenuDB::singleton().loadRecentSearches(name, searchItems);
 }
 
 void WebPageProxy::editorStateChanged(const EditorState& editorState)
